--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "chromedriver-autoinstaller>=0.6.4",
+    "loguru>=0.7.3",
+    "selenium>=4.33.0",
+]
 
