--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "chromedriver-autoinstaller>=0.6.4",
     "loguru>=0.7.3",
+    "pytest>=8.4.0",
     "selenium>=4.33.0",
     "webdriver-manager>=4.0.2",
 ]
