Reworked crawler base class

--- a/configs/driver-settings.toml
+++ b/configs/driver-settings.toml
@@ -17,3 +17,20 @@ data-path               = "" # Leave empty to use a temp dir
 disk-cache-dir          = "" # Leave empty to use a temp dir
 remote-debugging-port 	= 9226
 
+[edge.options]
+args = [
+	"no-sandbox"
+	, "disable-dev-shm-usage"
+	, "disable-popup-blocking"
+	, "disable-background-networking"
+	, "ignore-certificate-errors"
+]
+
+[edge.options.kwargs]
+headless                = "new"
+log-level               = 3
+user-data-dir           = "" # Leave empty to use a temp dir
+data-path               = "" # Leave empty to use a temp dir
+disk-cache-dir          = "" # Leave empty to use a temp dir
+remote-debugging-port 	= 9226
+
